Added viewport + css
meta viewport tag added
CSS properties for em, u and blockquote added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>My new site</title>
 
@@ -96,6 +97,6 @@
         </div>
 
     </div>
-    
+
 </body>
 </html>
